# alpha_vantage_mcp

server/: pyproject.toml
server/src/: stdio_server.py
server/src/tools/: alpha_equities.py  registry.py
server/tests/: run_alpha_equities_local.py
