[project]
name = "av-mcp"
version = "0.3.1"
description = "Alpha Vantage MCP Server - Financial data APIs via Model Context Protocol"
requires-python = ">=3.13"
license = {text = "MIT"}
dependencies = [
    "awslabs-mcp-lambda-handler>=0.1.8",
    "click>=8.2.1",
    "loguru>=0.7.3",
    "mcp>=1.12.3",
    "python-dotenv>=1.1.1",
]

[project.scripts]
av-mcp = "src.stdio_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
include = [
    "lambda_function.py",
    "requirements.txt"
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0"
]
